feat: price crud admin endpoint
